# SCMS_turtlebot

./: README.md
depth_follower/: setup.py
depth_follower/config/: follower.params.yaml
depth_follower/models/depth_cam/: model.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/depth_follower/lib/depth_follower/: depth_follower_node
install/depth_follower/share/depth_follower/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warehouse_env/share/warehouse_env/: package.bash  package.dsv  (+4 more)
log/: latest_build
src/depth_follower/: package.xml  setup.cfg  setup.py
src/depth_follower/depth_follower/: __init__.py  depth_follower_node.py
src/depth_follower/launch/: follower.launch.py  sim_tb3_warehouse.launch.py  sim_tb3_with_depth.launch.py
src/depth_follower/models/depth_cam/: model.config
src/depth_follower/models/floor_concrete/: model.sdf
src/depth_follower/models/hi_vis_person/: model.sdf
src/depth_follower/models/pallet_box/: model.config  model.sdf
src/depth_follower/models/shelf_simple/: model.config  model.sdf
src/depth_follower/models/turtlebot3_burger/: model.sdf
src/depth_follower/worlds/: warehouse_turtlebot.world
src/warehouse_env/: README.md  package.xml  setup.cfg  setup.py
src/warehouse_env/models/floor_concrete/: model.config  model.sdf
src/warehouse_env/models/hi_vis_person/: model.config  model.sdf
src/warehouse_env/models/pallet_box/: model.sdf
src/warehouse_env/models/shelf_simple/: model.sdf
src/warehouse_env/worlds/: warehouse.world.sdf
(+15 files in other folders)
