<?xml version="1.0"?>
<package format="3">
  <name>depth_follower</name>
  <version>0.0.1</version>
  <description>Depth-image based person follower for TurtleBot</description>
  <maintainer email="you@example.com">SCMS Team</maintainer>
  <license>MIT</license>

  <!-- Python package, not CMake -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <!-- THIS line tells colcon it's a Python package -->
    <build_type>ament_python</build_type>
  </export>
</package>
